// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for 'US_AZ' 'RES001' 1`] = `
{
  "admissionDate": 2020-09-15T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES001",
  "facilityId": "FACILITY1",
  "gender": "FEMALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": "2021-12-21",
    "csbdDate": "2022-03-21",
    "csedDate": "2022-11-16",
    "ercdDate": "2022-06-06",
    "projectedCsbdDate": "2022-03-21",
    "projectedDtpDate": undefined,
    "projectedTprDate": "2021-12-21",
    "sedDate": "2022-09-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER1",
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Elinor",
    "middleNames": "Maja",
    "surname": "Sloan",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_az_res001",
  "releaseDate": 2022-09-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES002' 1`] = `
{
  "admissionDate": 2017-08-06T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES002",
  "facilityId": "FACILITY2",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": "2022-02-04",
    "csbdDate": "2022-05-05",
    "csedDate": "2024-02-01",
    "ercdDate": "2022-07-21",
    "projectedCsbdDate": "2022-05-05",
    "projectedDtpDate": undefined,
    "projectedTprDate": "2022-02-04",
    "sedDate": "2023-05-18",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER2",
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Michael",
    "middleNames": "James",
    "surname": "Mooney",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_az_res002",
  "releaseDate": 2023-05-18T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES003' 1`] = `
{
  "admissionDate": 2018-05-29T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES003",
  "facilityId": "FACILITY2",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": undefined,
    "csbdDate": "2022-04-12",
    "csedDate": "2023-08-08",
    "ercdDate": "2022-06-28",
    "projectedCsbdDate": "2022-04-12",
    "projectedDtpDate": undefined,
    "projectedTprDate": "2022-01-12",
    "sedDate": "2023-03-03",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER3",
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Sebastien",
    "middleNames": "Harry",
    "surname": "Bose",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "recordId": "us_az_res003",
  "releaseDate": 2023-03-03T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_AZ' 'RES004' 1`] = `
{
  "admissionDate": 2021-01-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES004",
  "facilityId": "FACILITY2",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": undefined,
    "csbdDate": "2023-01-10",
    "csedDate": "2023-11-25",
    "ercdDate": "2023-03-28",
    "projectedCsbdDate": "2023-01-10",
    "projectedDtpDate": undefined,
    "projectedTprDate": "2022-10-12",
    "sedDate": "2023-08-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER3",
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Sasha",
    "middleNames": "Gideon",
    "surname": "Burch",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "recordId": "us_az_res004",
  "releaseDate": 2023-08-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_AZ' 'RES014' 1`] = `
{
  "admissionDate": 2020-09-15T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES014",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": "2021-12-21",
    "acisTprDate": "2021-12-21",
    "csbdDate": "2022-03-21",
    "csedDate": undefined,
    "ercdDate": "2022-06-06",
    "projectedCsbdDate": "2022-03-21",
    "projectedDtpDate": "2021-12-21",
    "projectedTprDate": "2021-12-21",
    "sedDate": "2022-09-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER1",
  "personExternalId": "RES014",
  "personName": {
    "givenNames": "Carl",
    "middleNames": "Benedict",
    "surname": "Garrett",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres014",
  "recordId": "us_az_res014",
  "releaseDate": 2022-09-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_AZ' 'RES015' 1`] = `
{
  "admissionDate": 2017-08-06T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES015",
  "facilityId": "FACILITY2",
  "gender": "FEMALE",
  "metadata": {
    "acisDtpDate": "2022-02-04",
    "acisTprDate": "2022-02-04",
    "csbdDate": "2022-05-05",
    "csedDate": undefined,
    "ercdDate": "2022-07-21",
    "projectedCsbdDate": "2022-05-05",
    "projectedDtpDate": "2022-02-04",
    "projectedTprDate": "2022-02-04",
    "sedDate": "2023-05-18",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER1",
  "personExternalId": "RES015",
  "personName": {
    "givenNames": "Rosalie",
    "middleNames": "Lana",
    "surname": "Bloggs",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres015",
  "recordId": "us_az_res015",
  "releaseDate": 2023-05-18T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT C",
}
`;

exports[`schema for 'US_AZ' 'RES016' 1`] = `
{
  "admissionDate": 2018-05-29T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES016",
  "facilityId": "FACILITY3",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": undefined,
    "csbdDate": "2022-04-12",
    "csedDate": undefined,
    "ercdDate": "2022-06-28",
    "projectedCsbdDate": "2022-04-12",
    "projectedDtpDate": "2022-01-12",
    "projectedTprDate": "2022-01-12",
    "sedDate": "2023-03-03",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER2",
  "personExternalId": "RES016",
  "personName": {
    "givenNames": "Kyron",
    "middleNames": "Daneel",
    "surname": "Christensen",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres016",
  "recordId": "us_az_res016",
  "releaseDate": 2023-03-03T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES017' 1`] = `
{
  "admissionDate": 2020-10-13T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES017",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": undefined,
    "csbdDate": "2022-03-26",
    "csedDate": undefined,
    "ercdDate": "2022-06-11",
    "projectedCsbdDate": "2022-03-26",
    "projectedDtpDate": "2021-12-26",
    "projectedTprDate": "2021-12-26",
    "sedDate": "2022-09-19",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER2",
  "personExternalId": "RES017",
  "personName": {
    "givenNames": "Teddy",
    "middleNames": "Roger",
    "surname": "Villegas",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres017",
  "recordId": "us_az_res017",
  "releaseDate": 2023-03-03T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES018' 1`] = `
{
  "admissionDate": 2021-01-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES018",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": undefined,
    "acisTprDate": undefined,
    "csbdDate": "2023-01-10",
    "csedDate": undefined,
    "ercdDate": "2023-03-28",
    "projectedCsbdDate": "2023-01-10",
    "projectedDtpDate": "2022-10-12",
    "projectedTprDate": "2022-10-12",
    "sedDate": "2023-08-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER3",
  "personExternalId": "RES018",
  "personName": {
    "givenNames": "Derrell",
    "middleNames": "Jason",
    "surname": "Stewart",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres018",
  "recordId": "us_az_res018",
  "releaseDate": 2023-08-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_AZ' 'RES019' 1`] = `
{
  "admissionDate": 2020-12-11T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MEDIUM",
  "displayId": "RES019",
  "facilityId": "FACILITY2",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER3",
  "personExternalId": "RES019",
  "personName": {
    "givenNames": "Allyn",
    "middleNames": "Bobby",
    "surname": "Fisher",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres019",
  "recordId": "us_az_res019",
  "releaseDate": 2022-12-11T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES020' 1`] = `
{
  "admissionDate": 2019-07-26T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MEDIUM",
  "displayId": "RES020",
  "facilityId": "FACILITY2",
  "gender": "FEMALE",
  "metadata": {},
  "officerId": "OFFICER3",
  "personExternalId": "RES020",
  "personName": {
    "givenNames": "Hailee",
    "middleNames": "Gabriella",
    "surname": "Esposito",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres020",
  "recordId": "us_az_res020",
  "releaseDate": 2022-07-25T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES021' 1`] = `
{
  "admissionDate": 2020-10-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES021",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": "2022-01-30",
    "acisTprDate": "2022-01-30",
    "csbdDate": "2022-04-30",
    "csedDate": undefined,
    "ercdDate": "2022-07-16",
    "projectedCsbdDate": "2022-04-30",
    "projectedDtpDate": "2022-01-30",
    "projectedTprDate": "2022-01-30",
    "sedDate": "2022-08-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER1",
  "personExternalId": "RES021",
  "personName": {
    "givenNames": "Marcus",
    "middleNames": "Theodore",
    "surname": "Rivera",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres021",
  "recordId": "us_az_res021",
  "releaseDate": 2022-08-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT C",
}
`;

exports[`schema for 'US_AZ' 'RES022' 1`] = `
{
  "admissionDate": 2018-11-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES022",
  "facilityId": "FACILITY2",
  "gender": "FEMALE",
  "metadata": {
    "acisDtpDate": "2022-02-14",
    "acisTprDate": "2022-02-14",
    "csbdDate": "2022-05-15",
    "csedDate": undefined,
    "ercdDate": "2022-07-31",
    "projectedCsbdDate": "2022-05-15",
    "projectedDtpDate": "2022-02-14",
    "projectedTprDate": "2022-02-14",
    "sedDate": "2022-11-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER2",
  "personExternalId": "RES022",
  "personName": {
    "givenNames": "Sophia",
    "middleNames": "Isabella",
    "surname": "Chen",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres022",
  "recordId": "us_az_res022",
  "releaseDate": 2022-11-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_AZ' 'RES023' 1`] = `
{
  "admissionDate": 2019-09-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToTPR",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES023",
  "facilityId": "FACILITY3",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": "2022-03-01",
    "acisTprDate": "2022-03-01",
    "csbdDate": "2022-05-30",
    "csedDate": undefined,
    "ercdDate": "2022-08-15",
    "projectedCsbdDate": "2022-05-30",
    "projectedDtpDate": "2022-03-01",
    "projectedTprDate": "2022-03-01",
    "sedDate": "2022-09-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER3",
  "personExternalId": "RES023",
  "personName": {
    "givenNames": "Darius",
    "middleNames": "Alexander",
    "surname": "Washington",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres023",
  "recordId": "us_az_res023",
  "releaseDate": 2022-09-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_AZ' 'RES024' 1`] = `
{
  "admissionDate": 2020-06-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES024",
  "facilityId": "FACILITY1",
  "gender": "FEMALE",
  "metadata": {
    "acisDtpDate": "2022-03-16",
    "acisTprDate": "2022-03-16",
    "csbdDate": "2022-06-14",
    "csedDate": undefined,
    "ercdDate": "2022-08-30",
    "projectedCsbdDate": "2022-06-14",
    "projectedDtpDate": "2022-03-16",
    "projectedTprDate": "2022-03-16",
    "sedDate": "2022-06-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER1",
  "personExternalId": "RES024",
  "personName": {
    "givenNames": "Luna",
    "middleNames": "Marie",
    "surname": "Garcia",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres024",
  "recordId": "us_az_res024",
  "releaseDate": 2022-06-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_AZ' 'RES025' 1`] = `
{
  "admissionDate": 2019-07-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES025",
  "facilityId": "FACILITY2",
  "gender": "MALE",
  "metadata": {
    "acisDtpDate": "2022-03-31",
    "acisTprDate": "2022-03-31",
    "csbdDate": "2022-06-29",
    "csedDate": undefined,
    "ercdDate": "2022-09-14",
    "projectedCsbdDate": "2022-06-29",
    "projectedDtpDate": "2022-03-31",
    "projectedTprDate": "2022-03-31",
    "sedDate": "2022-07-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER2",
  "personExternalId": "RES025",
  "personName": {
    "givenNames": "Kai",
    "middleNames": "James",
    "surname": "Nguyen",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres025",
  "recordId": "us_az_res025",
  "releaseDate": 2022-07-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT C",
}
`;

exports[`schema for 'US_AZ' 'RES026' 1`] = `
{
  "admissionDate": 2020-08-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usAzReleaseToDTP",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES026",
  "facilityId": "FACILITY3",
  "gender": "FEMALE",
  "metadata": {
    "acisDtpDate": "2022-04-15",
    "acisTprDate": "2022-04-15",
    "csbdDate": "2022-07-14",
    "csedDate": undefined,
    "ercdDate": "2022-09-29",
    "projectedCsbdDate": "2022-07-14",
    "projectedDtpDate": "2022-04-15",
    "projectedTprDate": "2022-04-15",
    "sedDate": "2022-08-16",
    "stateCode": "US_AZ",
  },
  "officerId": "OFFICER3",
  "personExternalId": "RES026",
  "personName": {
    "givenNames": "Aria",
    "middleNames": "Sophia",
    "surname": "Patel",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres026",
  "recordId": "us_az_res026",
  "releaseDate": 2022-08-16T00:00:00.000Z,
  "stateCode": "US_AZ",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_CO' 'RES001' 1`] = `
{
  "admissionDate": 2020-09-10T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "RES001",
  "facilityId": "CO_DEMO_FACILITY",
  "facilityUnitId": null,
  "gender": "MALE",
  "metadata": {},
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "John",
    "middleNames": "Michael",
    "surname": "Smith",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_co_RES001",
  "stateCode": "US_CO",
  "unitId": null,
}
`;

exports[`schema for 'US_CO' 'RES002' 1`] = `
{
  "admissionDate": 2019-06-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "RES002",
  "facilityId": "CO_DEMO_FACILITY",
  "facilityUnitId": null,
  "gender": "FEMALE",
  "metadata": {},
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Jane",
    "middleNames": "Marie",
    "surname": "Johnson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_co_RES002",
  "stateCode": "US_CO",
  "unitId": null,
}
`;

exports[`schema for 'US_ID' 'RES001' 1`] = `
{
  "admissionDate": 2019-08-12T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usIdExpandedCRC",
    "usIdCustodyLevelDowngrade",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES001",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "crcFacilities": [
      "CRC LRC",
    ],
    "initialParoleHearingDate": "2020-03-12",
    "nextParoleHearingDate": "2024-09-15",
    "stateCode": "US_ID",
    "tentativeParoleDate": "2025-02-10",
  },
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Andre",
    "middleNames": "Isaiah",
    "surname": "Hall",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_id_res001",
  "releaseDate": 2025-10-22T00:00:00.000Z,
  "stateCode": "US_ID",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_ID' 'RES002' 1`] = `
{
  "admissionDate": 2020-01-12T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usIdCRCWorkRelease",
    "usIdCustodyLevelDowngrade",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES002",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "crcFacilities": [
      "CRC LRC",
      "CRC PRC",
    ],
    "initialParoleHearingDate": "2021-03-12",
    "nextParoleHearingDate": "2024-09-15",
    "stateCode": "US_ID",
    "tentativeParoleDate": "2025-02-10",
  },
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Antonio",
    "surname": "Martin",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_id_res002",
  "releaseDate": 2026-07-06T00:00:00.000Z,
  "stateCode": "US_ID",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_ID' 'RES003' 1`] = `
{
  "admissionDate": 2017-07-12T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usIdCRCWorkRelease",
    "usIdCRCResidentWorker",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES003",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "crcFacilities": [
      "CRC PRC",
    ],
    "initialParoleHearingDate": "2018-05-18",
    "nextParoleHearingDate": "2024-09-15",
    "stateCode": "US_ID",
    "tentativeParoleDate": "2026-02-10",
  },
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Walter",
    "surname": "Brown",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "recordId": "us_id_res003",
  "releaseDate": 2027-06-06T00:00:00.000Z,
  "stateCode": "US_ID",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_ID' 'RES004' 1`] = `
{
  "admissionDate": 2021-07-12T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usIdCRCResidentWorker",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES004",
  "facilityId": "FACILITY1",
  "gender": "MALE",
  "metadata": {
    "crcFacilities": [
      "CRC LRC",
      "CRC PRC",
    ],
    "initialParoleHearingDate": "2023-03-12",
    "nextParoleHearingDate": "2024-09-15",
    "stateCode": "US_ID",
    "tentativeParoleDate": "2025-09-10",
  },
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Nathan",
    "surname": "Torres",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "recordId": "us_id_res004",
  "releaseDate": 2027-06-06T00:00:00.000Z,
  "stateCode": "US_ID",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_MA' 'RES001' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES001",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": 2026-12-15T00:00:00.000Z,
    "creditActivity": [
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 0,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 0,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "I",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 10,
        "COMPLETION": 30,
        "EARNEDGoodTime": 0,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-11-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-11-30T00:00:00.000Z,
        "rating": "S",
      },
    ],
    "isEgtDisabled": false,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": 2027-02-16T00:00:00.000Z,
    "rtsDate": 2026-11-15T00:00:00.000Z,
    "stateCode": "US_MA",
    "totalCompletionCredit": 30,
    "totalCompletionCreditDaysCalculated": 30,
    "totalStateCredit": 63.5,
    "totalStateCreditDaysCalculated": 63,
  },
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Laurence",
    "middleNames": undefined,
    "surname": "Baumbach",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_ma_RES001",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'RES002' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES002",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": null,
    "creditActivity": [
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2020-12-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2020-12-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-01-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 10,
        "COMPLETION": 30,
        "EARNEDGoodTime": 0,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-01-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-02-28T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-03-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-04-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-05-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-06-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-07-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-11-30T00:00:00.000Z,
        "rating": "S",
      },
    ],
    "isEgtDisabled": false,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": null,
    "rtsDate": null,
    "stateCode": "US_MA",
    "totalCompletionCredit": 80,
    "totalCompletionCreditDaysCalculated": 0,
    "totalStateCredit": 988,
    "totalStateCreditDaysCalculated": 0,
  },
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Dan",
    "middleNames": "Michael",
    "surname": "Krajcik",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_ma_RES002",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'RES003' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES003",
  "facilityId": "DEMO FACILITY 2",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": 2023-11-03T00:00:00.000Z,
    "creditActivity": [
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 5,
        "activity": "Reentry Readiness Workshop",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 5,
        "activity": "Reentry Readiness Workshop",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-11-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNEDGoodTime": 5,
        "activity": "Reentry Readiness Workshop",
        "creditDate": 2021-11-30T00:00:00.000Z,
        "rating": "S",
      },
    ],
    "isEgtDisabled": false,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": 2023-11-04T00:00:00.000Z,
    "rtsDate": null,
    "stateCode": "US_MA",
    "totalCompletionCredit": 0,
    "totalCompletionCreditDaysCalculated": 0,
    "totalStateCredit": 133,
    "totalStateCreditDaysCalculated": 1,
  },
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Israel",
    "middleNames": "Nixon",
    "surname": "Willms",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "recordId": "us_ma_RES003",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'RES004' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES004",
  "facilityId": "DEMO FACILITY 2",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": null,
    "creditActivity": [],
    "isEgtDisabled": true,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": null,
    "rtsDate": null,
    "stateCode": "US_MA",
    "totalCompletionCredit": 0,
    "totalCompletionCreditDaysCalculated": 0,
    "totalStateCredit": 0,
    "totalStateCreditDaysCalculated": 0,
  },
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Marty",
    "middleNames": undefined,
    "surname": "Fahey",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "recordId": "us_ma_RES004",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_ME' 'RES001' 1`] = `
{
  "admissionDate": 2013-11-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES001",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "First",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres001",
  "recordId": "us_me_001",
  "releaseDate": 2024-11-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-11-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES002' 1`] = `
{
  "admissionDate": 2018-02-17T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES002",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Second",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres002",
  "recordId": "us_me_002",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES003' 1`] = `
{
  "admissionDate": 2019-06-18T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES003",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS_FEMALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Third",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres003",
  "recordId": "us_me_003",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES004' 1`] = `
{
  "admissionDate": 2019-05-18T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "COMMUNITY",
  "displayId": "dRES004",
  "facilityId": "FACILITY NAME",
  "gender": "INTERNAL_UNKNOWN",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Fourth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres004",
  "recordId": "us_me_004",
  "releaseDate": 2024-01-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES005' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES005",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES005",
  "personName": {
    "givenNames": "Fifth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres005",
  "recordId": "us_me_005",
  "releaseDate": 2024-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-05-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES006' 1`] = `
{
  "admissionDate": 2015-02-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES006",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES006",
  "personName": {
    "givenNames": "Sixth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres006",
  "recordId": "us_me_006",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES007' 1`] = `
{
  "admissionDate": 2019-06-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES007",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES007",
  "personName": {
    "givenNames": "Seventh",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres007",
  "recordId": "us_me_007",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES008' 1`] = `
{
  "admissionDate": 2015-08-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES008",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES008",
  "personName": {
    "givenNames": "Eighth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres008",
  "recordId": "us_me_008",
  "releaseDate": 2024-08-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-08-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES009' 1`] = `
{
  "admissionDate": 2014-12-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES009",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES009",
  "personName": {
    "givenNames": "Ninth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres009",
  "recordId": "us_me_009",
  "releaseDate": 2025-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2020-01-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES998' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MEDIUM",
  "displayId": "dRES998",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES998",
  "personName": {
    "givenNames": "NoRelease",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres998",
  "recordId": "us_me_998",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES999' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MEDIUM",
  "displayId": "dRES999",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES999",
  "personName": {
    "givenNames": "Ineligible",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres999",
  "recordId": "us_me_999",
  "releaseDate": 2025-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-11-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_NC' 'RES001' 1`] = `
{
  "admissionDate": 2020-09-10T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "RES001",
  "facilityId": "NC_DEMO_FACILITY",
  "facilityUnitId": null,
  "gender": "MALE",
  "metadata": {},
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Albert",
    "middleNames": "Ross",
    "surname": "Garry",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_nc_RES001",
  "stateCode": "US_NC",
  "unitId": null,
}
`;

exports[`schema for 'US_NC' 'RES002' 1`] = `
{
  "admissionDate": 2019-06-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "RES002",
  "facilityId": "NC_DEMO_FACILITY",
  "facilityUnitId": null,
  "gender": "FEMALE",
  "metadata": {},
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Sabrina",
    "middleNames": "Alysa",
    "surname": "Johnston",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_nc_RES002",
  "stateCode": "US_NC",
  "unitId": null,
}
`;

exports[`schema for 'US_NE' 'RES001' 1`] = `
{
  "admissionDate": 2019-09-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usNeGoodTimeRestoration",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES001",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "A-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 45,
    "jailTimeDays": 174,
    "lb191Credits": 18,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 16,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 8,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2019-09-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2024-03-16T00:00:00.000Z,
  },
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Joseph",
    "middleNames": "T",
    "surname": "Gutmann",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_ne_RES001",
  "stateCode": "US_NE",
  "unitId": "A-WING",
}
`;

exports[`schema for 'US_NE' 'RES002' 1`] = `
{
  "admissionDate": 2020-04-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usNeGoodTimeRestoration",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES002",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "A-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 25,
    "jailTimeDays": 174,
    "lb191Credits": 12,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 10,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 5,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2020-04-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2023-06-16T00:00:00.000Z,
  },
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Marcus",
    "middleNames": "",
    "surname": "Anderson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_ne_RES002",
  "stateCode": "US_NE",
  "unitId": "A-WING",
}
`;

exports[`schema for 'US_NE' 'RES003' 1`] = `
{
  "admissionDate": 2018-08-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usNeGoodTimeRestoration",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES003",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "B-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 245,
    "jailTimeDays": 220,
    "lb191Credits": 32,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 25,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 15,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2018-08-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2025-08-16T00:00:00.000Z,
  },
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "David",
    "middleNames": "L",
    "surname": "Thompson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "recordId": "us_ne_RES003",
  "stateCode": "US_NE",
  "unitId": "B-WING",
}
`;

exports[`schema for 'US_NE' 'RES004' 1`] = `
{
  "admissionDate": 2019-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usNeGoodTimeRestoration",
  ],
  "custodyLevel": "MINIMUM",
  "displayId": "RES004",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "C-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 120,
    "jailTimeDays": 189,
    "lb191Credits": 24,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 18,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 10,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2019-05-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2024-09-16T00:00:00.000Z,
  },
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Robert",
    "middleNames": "J",
    "surname": "Martinez",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "recordId": "us_ne_RES004",
  "stateCode": "US_NE",
  "unitId": "C-WING",
}
`;

exports[`schema for 'US_NE' 'RES005' 1`] = `
{
  "admissionDate": 2019-10-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usNeGoodTimeRestoration",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES005",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "B-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "VIOLATION",
        "creditsEarned": -15,
        "isRestorable": "Y",
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": "MR-2024-105",
        "violationCode": "IDC-301",
        "violationCount": "1",
        "violationDescription": "DISOBEYING A DIRECT ORDER",
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 85,
    "jailTimeDays": 174,
    "lb191Credits": 20,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 14,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 8,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2019-10-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2023-11-16T00:00:00.000Z,
  },
  "personExternalId": "RES005",
  "personName": {
    "givenNames": "James",
    "middleNames": "A",
    "surname": "Wilson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres005",
  "recordId": "us_ne_RES005",
  "stateCode": "US_NE",
  "unitId": "B-WING",
}
`;

exports[`schema for 'US_NE' 'RES006' 1`] = `
{
  "admissionDate": 2019-07-16T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usNeGoodTimeRestoration",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "RES006",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "B-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-02-01T00:00:00.000Z,
        "creditDate": 2021-02-01T00:00:00.000Z,
        "creditType": "VIOLATION",
        "creditsEarned": -90,
        "isRestorable": "Y",
        "lastModifiedDate": 2021-02-01T00:00:00.000Z,
        "misconductReportNumber": "MR-2024-078",
        "violationCode": "CLASS1-201",
        "violationCount": "1",
        "violationDescription": "AGGREV ASSULT/ASSULT/FIGHTING",
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 160,
    "jailTimeDays": 174,
    "lb191Credits": 26,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 20,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 12,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2019-07-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2024-07-16T00:00:00.000Z,
  },
  "personExternalId": "RES006",
  "personName": {
    "givenNames": "Christopher",
    "middleNames": "",
    "surname": "Davis",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres006",
  "recordId": "us_ne_RES006",
  "stateCode": "US_NE",
  "unitId": "B-WING",
}
`;

exports[`schema for 'US_NE' 'RES007' 1`] = `
{
  "admissionDate": 2019-11-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "RES007",
  "facilityId": "DEMOFACILITY",
  "facilityUnitId": "A-WING",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "actionDate": 2021-07-01T00:00:00.000Z,
        "creditDate": 2021-07-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-07-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-08-01T00:00:00.000Z,
        "creditDate": 2021-08-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-08-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-09-01T00:00:00.000Z,
        "creditDate": 2021-09-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-09-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-10-01T00:00:00.000Z,
        "creditDate": 2021-10-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-10-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-11-01T00:00:00.000Z,
        "creditDate": 2021-11-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-11-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
      {
        "actionDate": 2021-12-01T00:00:00.000Z,
        "creditDate": 2021-12-01T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 3,
        "isRestorable": null,
        "lastModifiedDate": 2021-12-01T00:00:00.000Z,
        "misconductReportNumber": null,
        "violationCode": null,
        "violationCount": null,
        "violationDescription": null,
      },
    ],
    "deadTimeDays": 0,
    "goodTimeAllowedDays": 2922,
    "goodTimeBalanceDays": 2922,
    "goodTimeLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "goodTimeLawNumber": "191",
    "goodTimeLostDaysNonRestorable": 0,
    "goodTimeLostDaysRestorable": 65,
    "jailTimeDays": 145,
    "lb191Credits": 16,
    "mandatoryMinimumDate": null,
    "mandatoryMinimumSentenceDays": 0,
    "mandatoryMinimumSentenceMonths": 0,
    "mandatoryMinimumSentenceYears": 0,
    "maximumSentenceDays": 0,
    "maximumSentenceMonths": 0,
    "maximumSentenceYears": 12,
    "minimumSentenceDays": 0,
    "minimumSentenceMonths": 0,
    "minimumSentenceYears": 7,
    "numHoldsAndDetainers": 0,
    "numNotifiers": 0,
    "paroleEligibilityDate": 2023-12-16T00:00:00.000Z,
    "sentenceInfoIsCurrent": true,
    "sentenceLastModifiedDate": 2021-12-01T00:00:00.000Z,
    "sentenceStartDate": 2019-11-16T00:00:00.000Z,
    "stateCode": "US_NE",
    "tentativeReleaseDate": 2023-08-16T00:00:00.000Z,
  },
  "personExternalId": "RES007",
  "personName": {
    "givenNames": "Michael",
    "middleNames": "R",
    "surname": "Johnson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres007",
  "recordId": "us_ne_RES007",
  "stateCode": "US_NE",
  "unitId": "A-WING",
}
`;

exports[`schema for 'US_TN' 'RES001' 1`] = `
{
  "admissionDate": 2019-05-30T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usTnCustodyLevelDowngrade",
  ],
  "custodyLevel": "CLOSE",
  "displayId": "dRES001",
  "facilityId": "BLEDSOE_CC",
  "facilityUnitId": "BLEDSOE_CC‡UNIT A",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-07-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-08-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "REMOVAL",
        "creditsEarned": -10,
      },
      {
        "creditDate": 2021-10-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-11-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
    ],
    "expirationDate": 2023-08-22T00:00:00.000Z,
    "expirationDateOriginal": 2025-10-12T00:00:00.000Z,
    "fileUpdateDate": 2021-12-15T00:00:00.000Z,
    "latestClassificationDate": 2021-06-27T00:00:00.000Z,
    "releaseEligibilityDate": 2022-07-26T00:00:00.000Z,
    "sentenceEffectiveDate": 2019-05-08T00:00:00.000Z,
    "stateCode": "US_TN",
  },
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Carmen",
    "surname": "Reyes",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_tn_res001",
  "releaseDate": 2025-10-12T00:00:00.000Z,
  "stateCode": "US_TN",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_TN' 'RES002' 1`] = `
{
  "admissionDate": 2016-11-11T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usTnCustodyLevelDowngrade",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "dRES002",
  "facilityId": "BLEDSOE_CC",
  "facilityUnitId": "BLEDSOE_CC‡UNIT A",
  "gender": "FEMALE",
  "metadata": {
    "creditActivity": [
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-07-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-08-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "REMOVAL",
        "creditsEarned": -10,
      },
      {
        "creditDate": 2021-10-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-11-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
    ],
    "expirationDate": 2023-08-22T00:00:00.000Z,
    "expirationDateOriginal": 2025-10-12T00:00:00.000Z,
    "fileUpdateDate": 2021-12-15T00:00:00.000Z,
    "latestClassificationDate": 2021-06-27T00:00:00.000Z,
    "releaseEligibilityDate": 2022-07-26T00:00:00.000Z,
    "sentenceEffectiveDate": 2019-05-08T00:00:00.000Z,
    "stateCode": "US_TN",
  },
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Jessica",
    "surname": "Ren",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_tn_res002",
  "releaseDate": 2023-03-26T00:00:00.000Z,
  "stateCode": "US_TN",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_TN' 'RES003' 1`] = `
{
  "admissionDate": 2018-09-07T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usTnAnnualReclassification",
    "usTnInitialClassification",
  ],
  "custodyLevel": "MEDIUM",
  "displayId": "dRES003",
  "facilityId": "BLEDSOE_CC",
  "facilityUnitId": "BLEDSOE_CC‡UNIT A",
  "gender": "MALE",
  "metadata": {
    "creditActivity": [
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-07-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-08-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "REMOVAL",
        "creditsEarned": -10,
      },
      {
        "creditDate": 2021-10-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-11-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
    ],
    "expirationDate": 2023-08-22T00:00:00.000Z,
    "expirationDateOriginal": 2025-10-12T00:00:00.000Z,
    "fileUpdateDate": 2021-12-15T00:00:00.000Z,
    "latestClassificationDate": 2021-06-27T00:00:00.000Z,
    "releaseEligibilityDate": 2022-07-26T00:00:00.000Z,
    "sentenceEffectiveDate": 2019-05-08T00:00:00.000Z,
    "stateCode": "US_TN",
  },
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Fei",
    "surname": "Jackson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "recordId": "us_tn_res003",
  "releaseDate": 2023-03-26T00:00:00.000Z,
  "stateCode": "US_TN",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_TN' 'RES004' 1`] = `
{
  "admissionDate": 2019-05-30T00:00:00.000Z,
  "allEligibleOpportunities": [
    "usTnAnnualReclassification",
    "usTnInitialClassification",
  ],
  "custodyLevel": "CLOSE",
  "displayId": "dRES004",
  "facilityId": "BLEDSOE_CC",
  "facilityUnitId": "BLEDSOE_CC‡UNIT A",
  "gender": "INTERNAL_UNKNOWN",
  "metadata": {
    "creditActivity": [
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-01-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-02-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-03-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-04-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-05-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "PROGRAM",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-06-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-07-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-08-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-09-16T00:00:00.000Z,
        "creditType": "REMOVAL",
        "creditsEarned": -10,
      },
      {
        "creditDate": 2021-10-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
      {
        "creditDate": 2021-11-16T00:00:00.000Z,
        "creditType": "BEHAVIOR",
        "creditsEarned": 6,
      },
    ],
    "expirationDate": 2023-08-22T00:00:00.000Z,
    "expirationDateOriginal": 2025-10-12T00:00:00.000Z,
    "fileUpdateDate": 2021-12-15T00:00:00.000Z,
    "latestClassificationDate": 2021-06-27T00:00:00.000Z,
    "releaseEligibilityDate": 2022-07-26T00:00:00.000Z,
    "sentenceEffectiveDate": 2019-05-08T00:00:00.000Z,
    "stateCode": "US_TN",
  },
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Geoff",
    "surname": "Zhang",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "recordId": "us_tn_res004",
  "releaseDate": 2023-07-04T00:00:00.000Z,
  "stateCode": "US_TN",
  "unitId": "UNIT A",
}
`;
